# libfprint

./: .gitignore  README  meson.build
data/: autosuspend.hwdb
libfprint/: fp-image-device-private.h  fp-image-device.c  fp-image.c  fp-image.h  fp-print.c  fpi-image-device.c  fpi-image-device.h  fpi-image.c  fpi-image.h  fpi-print.c  fpi-print.h  fprint-list-udev-hwdb.c  meson.build
libfprint/drivers/: goodix5110.c  goodix5110.h
libfprint/drivers/elanmoc/: elanmoc.c
libfprint/drivers/goodixmoc/: goodix.c  goodix.h  goodix_proto.c
libfprint/drivers/goodixtls/: goodix.c  goodix.h  goodix511.c  goodix511.h  goodix52xd.c  goodix52xd.h  goodix55x4.c  goodix55x4.h  goodix_proto.c  goodix_proto.h  goodixtls.c  goodixtls.h
libfprint/sigfm/: binary.hpp  img-info.hpp  meson.build  sigfm.cpp  sigfm.hpp  tests.cpp
tests/goodixmoc/: custom.py
